# pikepdf

./: .appveyor.yml  .cirrus.yml  .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  REUSE.toml  azure-pipelines.yml  build-constraints.txt  context7.json  lgtm.yml  licenses-for-wheels.txt  meson.build  meson.options  mp_compile.py  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  build_wheels.yml  cifuzz.yml  codeql-analysis.yml  pre-commit.yml  release.yml
.reuse/: dep5
.travis/: Brewfile
azure-pipelines/: build.bash  linux-build-deps.bash  linux-download-deps.bash  win-build.bash  win-download-qpdf.ps1  win-vcvars-build.bat
build-scripts/: environ-from-pyproject.py  generate-job-bindings.py  linux-build-sdist-deps.bash  linux-build-wheel-deps.bash  linux-cross-build-wheel-deps.bash  linux-download-qpdf-deps.bash  linux-download-qpdf.bash  linux-install-libxmp.bash  posix-build-sdist-deps.bash  posix-build-wheel-deps.bash  posix-download-qpdf.bash  win-download-qpdf.ps1
conda.recipe/: bld.bat  meta.yaml
debian/: copyright
docs/: Makefile  api.rst  arch.rst  binary-wheels.csv  changelog.rst  conf.py  docs_requirements.txt  encoding.rst  index.md  index.rst  installation.md  installation.rst  make.bat  objects.rst  pbtest.rst  pikepdf.rst  release_notes.rst  requirements.txt  resources.rst  source_build.md  source_build.rst  topics.rst  tutorial.md  tutorial.rst
docs/_ext/: fix_pybind11_autodoc.py
docs/_notebooks/: pages.ipynb
docs/api/: canvas.md  canvas.rst  exceptions.md  exceptions.rst  filters.md  filters.rst  form.md  form.rst  main.md  main.rst  models.md  models.rst  sanitize.md  settings.md  settings.rst
docs/dev/: windows-validation-718.md
docs/references/: arch.md  arch.rst  build.rst  build_process.md  build_process.rst  contributing.md  contributing.rst  debugging.md  debugging.rst  resources.md  resources.rst
docs/releasenotes/: index.md  index.rst  version0.md  version0.rst  version00.md  version01.md  version02.md  version03.md  version04.md  version05.md  version06.md  version07.md  version08.md  version09.md  version1.rst  version10.md  version10.rst  version2.md  version2.rst  version3.rst  version4.rst  version5.md  version5.rst  version6.rst  version7.md  version7.rst  version8.md  version8.rst  version9.md  version9.rst
docs/topics/: attachments.md  attachments.rst  content_streams.md  content_streams.rst  encoding.md  encoding.rst  images.md  images.rst  interactive_forms.md  interactive_forms.rst  jobs.md  metadata.md  metadata.rst  namepath.md  nametrees.md  nametrees.rst  objects.md  objects.rst  outlines.md  outlines.rst  overlays.md  overlays.rst  page.md  page.rst  page_copying.rst  pagelayout.md  pagelayout.rst  pages.md  pages.rst  qpdf_json.md  sanitize.md  security.md  security.rst  streams.md  streams.rst
docs/tutorial/: metadata.rst  page.rst  pages.ipynb  pages.rst  streams.rst
examples/: bench_object_construct.py  benchmark.py  fill_form.py  find_links.py
fuzzing/: build.sh  fuzz_helpers.py  pikepdf_fuzzer.py
licenses/: license.wheel.txt
pikepdf/: __init__.py  _boneyard.py  _cpphelpers.py
py/: main.cpp
requirements/: docs.txt  test.txt
src/: main.cpp  object.cpp  pikepdf.h  qpdf.cpp
src/core/: acroform.cpp  annotation.cpp  embeddedfiles.cpp  gsl.h  jbig2-inl.h  job.cpp  logger.cpp  matrix.cpp  meson.build  mmap_inputsource-inl.h  namepath.cpp  namepath.h  nametree.cpp  numbertree.cpp  object.cpp  object.h  object_construct.cpp  object_convert.cpp  object_equality.cpp  object_methods.cpp  object_repr.cpp  page.cpp  parsers.cpp  parsers.h  pikepdf.cpp  pikepdf.h  pipeline.cpp  pipeline.h  qpdf.cpp  qpdf_inputsource-inl.h  qpdf_lock.h  qpdf_pagelist.cpp  qpdf_pagelist.h  rectangle.cpp  tokenfilter.cpp  transcoding.cpp  utils.h
src/pikepdf/: __init__.py  _augments.py  _boneyard.py  _core.pyi  _cpphelpers.py  _data.py  _exceptions.py  _explicit_conv.py  _io.py  _methods.py  _objects.py  _page_copy.py  _pdfimage.py  _qpdf.py  _qpdf.pyi  _version.py  _xml.py  canvas.py  codec.py  ctm.py  exceptions.py  form.py  jbig2.py  jobs.py  meson.build  objects.py  py.typed  sanitize.py  settings.py
src/pikepdf/models/: __init__.py  _content_stream.py  _transcoding.py  ctm.py  encryption.py  image.py  lgtm.yml  matrix.py  meson.build  metadata.py  outlines.py
src/pikepdf/models/metadata/: __init__.py  _constants.py  _converters.py  _core.py  _docinfo.py  _xmp.py  meson.build
src/qpdf/: annotation.cpp  cpp11.cpp  embeddedfiles.cpp  filespec.cpp  gsl.h  jbig2-inl.h  job.cpp  logger.cpp  mmap_inputsource-inl.h  mmap_inputsource.h  nametree.cpp  numbertree.cpp  object.cpp  object_convert.cpp  object_parsers-inl.h  object_parsers.h  object_repr.cpp  page.cpp  parsers.cpp  parsers.h  pikepdf.cpp  pikepdf.h  pipeline.cpp  pipeline.h  qpdf.cpp  qpdf_inputsource-inl.h  qpdf_inputsource.h  qpdf_pagelist.cpp  qpdf_pagelist.h  qpdf_pipeline.h  rectangle.cpp  shims.cpp  shims.h  tokenfilter.cpp  utils.cpp  utils.h
tests/: conftest.py  test.py  test_acroform.py  test_annotation.py  test_array.py  test_attachments.py  test_augments.py  test_canvas.py  test_codec.py  test_ctm.py  test_decimal.py  test_dictionary.py  test_encrypt.py  test_errors.py  test_exotic.py  test_filters.py  test_foreign.py  test_form.py  test_formdupes.py  test_formxobject.py  test_image_access.py  test_import_leaks.py  test_io.py  test_io_psutil.py  test_ipython.py  test_jbig2.py  test_job.py  test_jobbuilder.py  test_json_io.py  test_lazy_load.py  test_matrix.py  test_memory_leaks.py  test_metadata.py  test_namepath.py  test_nametree.py  test_numbertree.py  test_object.py  test_object_construct_cpp.py  test_objectlist.py  test_outlines.py  (+15 more)
tests/resources/: Gray.icc  copyright
