[metadata]
name = pikepdf
description = Read and write PDFs with Python, powered by qpdf
license_files =
    LICENSE.txt
    licenses/license.wheel.txt
long_description = file: README.md
long_description_content_type = text/markdown
author = James R. Barlow
author_email = james@purplerock.ca
url = https://github.com/pikepdf/pikepdf
keywords =
    PDF
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: C++
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries
project_urls =
    Documentation = https://pikepdf.readthedocs.io/
    Source = https://github.com/pikepdf/pikepdf
    Tracker = https://github.com/pikepdf/pikepdf/issues

[options]
zip_safe = False
platforms = any
python_requires = >= 3.6
install_requires =
    lxml >= 4.0
    Pillow >= 6.0  # only needed for images; technically removable
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
include = src

[options.package_data]
pikepdf =
    *.dll
    py.typed

[options.extras_require]
docs =
    ipython
    matplotlib
    pybind11  # not strictly necessary if pybind11 is vendored
    setuptools_scm
    Sphinx >= 3
    sphinx-rtd-theme
test =
    attrs >= 20.2.0
    hypothesis >= 5, < 7
    Pillow >= 7, < 9
    psutil >= 5, < 6
    pybind11 >= 2.6.0
    pytest >= 6, < 7
    pytest-cov >= 2.10.1, < 3
    pytest-forked
    pytest-xdist >= 1.28, < 3
    pytest-timeout >= 1.4.2
    python-dateutil >= 2.8.0
    python-xmp-toolkit >= 2.0.1 ; sys_platform != "nt"

[aliases]
test=pytest

[tool:pytest]
norecursedirs = lib .pc .git venv
testpaths = tests
addopts =
	-n auto

[coverage:run]

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

[coverage:html]
directory = coverage/pycov

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
known_first_party = pikepdf
known_third_party = PIL,conftest,hypothesis,lxml,pkg_resources,psutil,pytest,setuptools
