[metadata]
name = pikepdf
description = Read and write PDFs with Python, powered by qpdf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pikepdf/pikepdf
author = James R. Barlow
author_email = james@purplerock.ca
license = MPL-2.0
license_file = LICENSE.txt
license_files =
    LICENSE.txt
    licenses/license.wheel.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries
keywords =
    PDF
project_urls =
    Documentation = https://pikepdf.readthedocs.io/
    Source = https://github.com/pikepdf/pikepdf
    Tracker = https://github.com/pikepdf/pikepdf/issues

[options]
packages = find:
install_requires =
    Pillow>=6.0
    lxml>=4.0
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
platforms = any
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
docs =
    Sphinx>=3
    ipython
    matplotlib
    pybind11
    setuptools_scm
    sphinx-issues
    sphinx-rtd-theme
    toml
test =
    Pillow>=7,<9
    attrs>=20.2.0
    coverage[toml]
    hypothesis>=5,<7
    psutil>=5,<6
    pybind11
    pytest>=6,<7
    pytest-cov>=2.10.1,<3
    pytest-timeout>=1.4.2
    pytest-xdist>=1.28,<3
    python-dateutil>=2.8.0
    toml
    python-xmp-toolkit>=2.0.1 ;sys_platform != "nt"

[options.package_data]
pikepdf =
    *.dll
    py.typed

[aliases]
test = pytest

[flake8]
ignore = D203,F401,W503,E501,E203,F841
exclude = .git,__pycache__,docs/conf.py,build,dist,.venv,.venvpp,.eggs,tmp
max-complexity = 10
max-line-length = 100
