[metadata]
name = pikepdf
description = Read and write PDFs with Python, powered by qpdf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pikepdf/pikepdf
author = James R. Barlow
author_email = james@purplerock.ca
license = MPL-2.0
license_files =
    LICENSE.txt
    licenses-for-wheels.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries
keywords =
    PDF
project_urls =
    Documentation = https://pikepdf.readthedocs.io/
    Source = https://github.com/pikepdf/pikepdf
    Tracker = https://github.com/pikepdf/pikepdf/issues

[options]
packages = find:
install_requires =
    Pillow>=9.0
    deprecation
    lxml>=4.8
    packaging
    importlib-metadata>=4;python_version<'3.8'  # until Python 3.8
    typing-extensions>=4;python_version<'3.8'
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
platforms = any
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
docs =
    GitPython
    PyGithub
    Sphinx>=3
    ipython
    matplotlib
    pybind11
    requests
    setuptools-scm
    sphinx-design
    sphinx-issues
    sphinx-rtd-theme
    tomli;python_version < '3.11'
mypy =
    lxml-stubs
    types-Pillow
    types-requests
    types-setuptools
test =
    attrs>=20.2.0
    coverage[toml]
    hypothesis>=6.36
    psutil>=5.9
    pybind11
    pytest>=6.2.5
    pytest-cov>=3.0.0
    pytest-timeout>=2.1.0
    pytest-xdist>=2.5.0
    python-dateutil>=2.8.1
    python-xmp-toolkit>=2.0.1 ;sys_platform != "nt" and platform_machine == "x86_64"
    tomli;python_version < '3.11'

[options.package_data]
pikepdf =
    *.dll
    py.typed

[aliases]
test = pytest

[flake8]
ignore = D203,F401,W503,E501,E203,F841
exclude = .git,__pycache__,docs/conf.py,build,dist,.venv,.venvpp,.eggs,tmp
max-complexity = 10
max-line-length = 100
