# SPDX-FileCopyrightText: 2025 James R. Barlow
# SPDX-License-Identifier: MPL-2.0

metadata_sources = files(
    '__init__.py',
    '_constants.py',
    '_converters.py',
    '_core.py',
    '_docinfo.py',
    '_xmp.py',
)

py.install_sources(
    metadata_sources,
    subdir: 'pikepdf/models/metadata',
)
